<resources>
    <string name="app_name">Attendance</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="edit_student">Edit Student</string>
    <string name="refresh">Refresh</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="admission_number">Admission Number</string>
    <string name="find">FIND</string>
    <string name="save">SAVE</string>
    <string name="subject_name">Subject Name</string>
    <string name="enter_hour">Enter Hour</string>
    <string name="body_here">Body here</string>
    <string name="title_here">Title Here</string>
    <string name="dev">Developed By:- Dismass Oketch</string>
    <string name="about_desc">This is an android student attendance manager suitable for secondary, primary and college teachers and students. It makes it easier for students to submit attendance, view notes and keep track of the timetable. It also makes it easier for teachers to upload results of the students</string>
    <string name="attendance_logo">Attendance logo</string>
    <string name="enter_your_sgpa">ENTER YOUR SGPA</string>
    <string name="find1">FIND</string>
    <string name="s1">S1</string>
    <string name="s2">S2</string>
    <string name="s3">S3</string>
    <string name="s4">S4</string>
    <string name="s5">S5</string>
    <string name="s6">S6</string>
    <string name="s7">S7</string>
    <string name="s8">S8</string>
    <string name="with_percentage">With Percentage</string>
    <string name="your_sgpa">Your Results</string>
    <string name="logout">Logout</string>
    <string name="admno">Admission Number</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="welcome">Welcome</string>
    <string name="sign_up_here">Sign Up here</string>
    <string name="confirm_password">confirm Password</string>
    <string name="name">Name</string>
    <string name="load">LOAD</string>
    <string name="admission_number">Admission Number</string>
    <string name="roll_number">Roll Number</string>
    <string name="contact">Contact</string>
    <string name="save_changes">SAVE CHANGES</string>
    <string name="save">SAVE</string>
    <string name="place_holder">Place holder</string>
</resources>
