<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.otema.attendance.Edit_Student">
    <LinearLayout
        android:layout_width="match_parent"
        android:padding="20dp"
        android:orientation="vertical"
        android:background="#ffffff"
        android:elevation="5dp"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="10"
            android:orientation="horizontal">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/register_"
                android:layout_weight="2"
                android:hint="@string/admission_number"
                android:textSize="20sp"
                android:paddingBottom="5dp"
                android:autofillHints="CI/0000/000"
                android:inputType="" />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:text="@string/load"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:background="@color/colorPrimary"
                android:id="@+id/loadForEdit"
                />
        </LinearLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/edit_name_"
            android:hint="@string/name"
            android:textSize="20sp"
            android:paddingBottom="5dp"
            android:autofillHints="John Doe"
            android:inputType="" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/roll_"
            android:inputType="number"
            android:hint="@string/roll_number"
            android:textSize="20sp"
            android:paddingBottom="5dp"
            android:autofillHints="01213456" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/contact_"
            android:inputType="phone"
            android:hint="@string/contact"
            android:textSize="20sp"
            android:paddingBottom="5dp"
            android:autofillHints="P.O Box xxx xxxx xxxxx" />

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/save_changes"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:background="@color/colorPrimary"
            android:textSize="16sp"
            android:id="@+id/buttonSAVEEDITS"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>
</RelativeLayout>
