<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/colorPrimaryDark"
    android:gravity="center"
    android:id="@+id/ctr"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.otema.attendance.About">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/abcde"
        android:orientation="vertical">


    </LinearLayout>
    <TextView
        android:id="@+id/names"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:gravity="center"
        android:text="@string/dev"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:id="@+id/imageViewAbout"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/ic_action_done_all"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/attendance_logo" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_desc"
        android:textSize="18sp"
        android:layout_alignBottom="@+id/imageViewAbout"
        android:layout_toEndOf="@+id/abcde"
        android:layout_alignParentTop="true"/>
</RelativeLayout>
